# cardano-datums

./: .gitignore  CHANGELOG.md  GettingStarted.md  README.md  cardano-datums.cabal
app/: Main.hs
app/CLI/: BlockfrostApi.hs  Parsers.hs  QueryDatum.hs  Run.hs  Types.hs
scripts/: add-datum.sh  burn-beacon.sh  initialize-datum.sh
src/: CardanoDatums.hs
test/: Test.hs
test/Test/: BeaconTraces.hs
